fixes page jank and primary thumbnail alignment

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -261,3 +261,9 @@
 .corner-cut {
   clip-path: polygon(0 50.72px,50.72px 0,100% 0,100% 50.72px,100% calc(100% - 50.72px),calc(100% - 50.72px) 100%,0 100%,0 calc(100% - 50.72px));
 }
+
+/* Prevent page load jank on item page */
+.primary-thumbnail img {
+    width: 100%;
+    height: auto;
+}
